--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-mediaconvert": "^1.61.1",
+    "@aws-cdk/aws-s3": "^1.61.1",
+    "@aws-cdk/aws-s3-notifications": "^1.61.1",
+    "@aws-cdk/aws-sns": "^1.61.1",
+    "@aws-cdk/aws-stepfunctions": "^1.61.1",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.61.1",
     "@aws-cdk/core": "1.61.1",
     "source-map-support": "^0.5.16"
   }
