--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.61.1",
-    "@types/jest": "^26.0.10",
+    "@types/jest": "^26.0.13",
     "@types/node": "10.17.27",
+    "aws-cdk": "1.61.1",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.61.1",
     "ts-node": "^8.1.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-dynamodb": "^1.61.1",
-    "@aws-cdk/aws-mediaconvert": "^1.61.1",
-    "@aws-cdk/aws-s3": "^1.61.1",
-    "@aws-cdk/aws-s3-notifications": "^1.61.1",
-    "@aws-cdk/aws-sns": "^1.61.1",
-    "@aws-cdk/aws-stepfunctions": "^1.61.1",
-    "@aws-cdk/aws-stepfunctions-tasks": "^1.61.1",
-    "@aws-cdk/core": "1.61.1",
+    "@aws-cdk/aws-dynamodb": "^1.63.0",
+    "@aws-cdk/aws-lambda-event-sources": "^1.63.0",
+    "@aws-cdk/aws-mediaconvert": "^1.63.0",
+    "@aws-cdk/aws-s3": "^1.63.0",
+    "@aws-cdk/aws-sns": "^1.63.0",
+    "@aws-cdk/aws-stepfunctions": "^1.63.0",
+    "@aws-cdk/aws-stepfunctions-tasks": "^1.63.0",
+    "@aws-cdk/core": "^1.63.0",
     "source-map-support": "^0.5.16",
     "uuid": "^8.3.0"
   }
