--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@aws-cdk/aws-dynamodb": "^1.63.0",
+    "@aws-cdk/aws-events-targets": "^1.63.0",
     "@aws-cdk/aws-lambda-event-sources": "^1.63.0",
     "@aws-cdk/aws-mediaconvert": "^1.63.0",
     "@aws-cdk/aws-s3": "^1.63.0",
