--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.63.0",
     "@aws-cdk/aws-dynamodb": "^1.63.0",
     "@aws-cdk/aws-events-targets": "^1.63.0",
     "@aws-cdk/aws-lambda-event-sources": "^1.63.0",
